--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -6,18 +6,27 @@
   <div class="container">
     {{ book.title }} by {{ book.author }}<br>
     {{ book.isbn }}<br>
+    <br>
+    todo:<br>
     Bookguru average rating<br>
     Goodreads average rating<br>
+    have both of those to the right of the book info. i'll need to read bootstrap's docs about format elements
     <br>
     form for user review - maybe have it hidden at first with a button to reveal the form?<br>
-    <form action="/postreview" method="post">
+    <hr>
+    <form action="/post_review" method="post">
       <div class="form-group">
-        <label for="stars">Stars</label>
-        <input type="range" class="form-control-range" id="stars" name="stars" min="0" max="5" step="0.5">
+        <label for="isbn">ISBN</label>
+        <input type="text" class="form-control" id="isbn" name="isbn" value={{ book.isbn }} readonly>
+      </div>
+      <div class="form-group">
+        <label for="stars">Score the book (0-10):</label>
+        <input type="range" class="form-control-range" id="stars" name="stars" min="0" max="10" step="0.5">
       </div>
       <div class="form-group">
         <label for="review">Review</label>
         <textarea type="text"  rows=3 class="form-control" id="review" name="review"></textarea>
+        <small class="form-text text-muted">Optional</small>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
       <small class="form-text text-muted">Be aware that you cannot edit your reviews!</small>
