--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group">
         <label for="stars">Score the book (0-10):</label>
-        <input type="range" class="form-control-range" id="stars" name="stars" min="0" max="10" step="0.5">
+        <input type="range" class="form-control-range" id="stars" name="stars" min="0" max="10">
       </div>
       <div class="form-group">
         <label for="review">Review</label>
@@ -32,6 +32,7 @@
       <small class="form-text text-muted">Be aware that you cannot edit your reviews!</small>
     </form>
     <hr>
+    List reviews by other users<br>
     goodreads reviews, 10 per page **pagination**<br>
   </div>
 {% endblock %}
