review page complete

--- a/project1/templates/index.html
+++ b/project1/templates/index.html
@@ -8,7 +8,8 @@
     <h1>Welcome to bookguru, {{ session.username }}!</h1>
     <h2>we are a made up website with no users and no internet access!</h2>
     <p align="right"><em>no seriously, please help us!</em></p>
-    <p>hahaha... anyway. please register if you are new here, and if you are already a member. Welcome home.</p>
+    <p>anyway. please register if you are new here, and if you are already a member. Welcome back.</p>
+    <p>the tagline says for <em>all</em> your needs but really you can just review books here. so.. enjoy!</p>
     <hr>
 
     <form action="/search" method="post">
