--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -4,16 +4,18 @@
 
 {% block body %}
   <div class="container">
-    {{ book.title }} by {{ book.author }}<br>
-    {{ book.isbn }}<br>
+    {{ msg | safe }}
+    <h1>{{ book.title }} by {{ book.author }}</h1>
+    <h4>Bookguru user rating:</h4>
+    Number of reviews: {{summary.count }}<br>
+    Average rating: {{ summary.avg }}<br>
     <br>
-    todo:<br>
-    Bookguru average rating<br>
-    Goodreads average rating<br>
-    have both of those to the right of the book info. i'll need to read bootstrap's docs about format elements
+    <h4>Goodreads user rating:</h4>
+    Number of ratings: {{ goodreads.ratings_count }}<br>
+    Average rating: {{ goodreads.average_rating }}<br>
     <br>
-    form for user review - maybe have it hidden at first with a button to reveal the form?<br>
     <hr>
+    <h3>Post a review</h3>
     <form action="/post_review" method="post">
       <div class="form-group">
         <label for="isbn">ISBN</label>
@@ -24,15 +26,34 @@
         <input type="range" class="form-control-range" id="stars" name="stars" min="0" max="10">
       </div>
       <div class="form-group">
-        <label for="review">Review</label>
-        <textarea type="text"  rows=3 class="form-control" id="review" name="review"></textarea>
+        <label for="review">Review:</label>
+        <textarea type="text" class="form-control" id="review" name="review"></textarea>
         <small class="form-text text-muted">Optional</small>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
       <small class="form-text text-muted">Be aware that you cannot edit your reviews!</small>
     </form>
-    <hr>
-    List reviews by other users<br>
-    goodreads reviews, 10 per page **pagination**<br>
+    <br>
+    <h3>Bookguru user reviews</h3>
+
+    <br>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Review</th>
+          <th scope="col">Stars</th>
+          <th scope="col">User</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in reviews %}
+            <tr>
+              <td>{{ item.review }}</td>
+              <td>{{ item.stars }}</td>
+              <td>{{ item.username }}</td>
+            </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 {% endblock %}
