quick text change

--- a/project1/templates/book.html
+++ b/project1/templates/book.html
@@ -8,11 +8,11 @@
     <h1>{{ book.title }} by {{ book.author }}</h1>
     <h4>Bookguru user rating:</h4>
     Number of reviews: {{summary.count }}<br>
-    Average rating: {{ summary.avg }}<br>
+    Average rating (out of 10): {{ summary.avg }}<br>
     <br>
     <h4>Goodreads user rating:</h4>
     Number of ratings: {{ goodreads.ratings_count }}<br>
-    Average rating: {{ goodreads.average_rating }}<br>
+    Average rating (out of 5): {{ goodreads.average_rating }}<br>
     <br>
     <hr>
     <h3>Post a review</h3>
