--- a/project2/templates/index.html
+++ b/project2/templates/index.html
@@ -3,13 +3,57 @@
   <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
-  </head>
-  <body>
-    <div class="container"><h1>TODO...</h1></div>
-    <div class="container" id="body"></div>
-    <script src="{{ url_for('static', filename='flack.js') }}"></script>
+
+    <!-- App and BootStrap JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='flack.js') }}"></script>
+
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand">Flack</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a href="" class="nav-link" data-page="home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" data-page="set_name">Login</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link" data-page="test">Test</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <div class="container"><h1>TODO...</h1></div>
+
+    <!-- temp form -->
+    <div class="container">
+      <form id="displayname_form">
+        <div class="form-group">
+          <label for="username">What should we call you?</label>
+          <input type="text" class="form-control" id="username" name="username" aria-describedby="Username">
+        </div>
+        <button type="button" class="btn btn-primary" id="displayname">Submit</button>
+      </form>
+    </div>
+
+    <!-- Page body content -->
+    <div class="container" id="body"></div>
+
+
   </body>
 </html>
