--- a/project2/templates/index.html
+++ b/project2/templates/index.html
@@ -29,9 +29,7 @@
               </div>
               <div class="dropdown-divider"></div>
               <div id="channel_list">
-                {% for channel in list %}
-                  <a class="nav-link dropdown-item" href="" onclick="load_channel('{{channel}}'); return false;">{{ channel }}</a>
-                {% endfor %}
+                <!-- channel list to be generated here -->
               </div>
             </div>
           </li>
@@ -42,14 +40,12 @@
             <a class ="nav-link" href="" onclick="alert('hey!'); return false;">Click me</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </nav>
-
-    <div class="container" id="todo"><h1>TODO...</h1></div>
 
     <!-- Page body content -->
     <div class="container" id="body"></div>
@@ -57,6 +53,8 @@
 
     <!-- Handlebars -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+    <!-- SocketIO -->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -99,6 +97,15 @@
         <hr>
         <span align="right" size="small">posted by {{content.posted_by}} at {{content.timestamp}}</span>
       </div>
+      {%- endraw %}
+    </script>
+
+    <!-- Channel list -->
+    <script id="template_channel_list">
+      {% raw -%}
+        {{#each channels}}
+          <a class="nav-link dropdown-item" href="" onclick="load_channel('{{channel}}'); return false;">{{channel}}</a>
+        {{/each}}
       {%- endraw %}
     </script>
   </body>
