--- a/project2/templates/index.html
+++ b/project2/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>flackchat</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
@@ -8,7 +9,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand">Flack</a>
+      <a class="navbar-brand">Flackchat</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,7 +24,6 @@
               Channel List
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="nav-link dropdown-item" href="" data-page="create">Create a New Channel</a>
               <div id="active_channel">
                 <!-- fill in active channel here, if any -->
               </div>
@@ -34,21 +34,19 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="" data-page="logout">Log out</a>
-          </li>
-          <li class="nav-item">
-            <a class ="nav-link" href="" onclick="alert('hey!'); return false;">Click me</a>
+            <a class="nav-link" href="" onclick="localStorage.clear();">Log out</a>
           </li>
         </ul>
-        <!-- <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
+        <form class="form-inline my-2 my-lg-0" onsubmit="createChannel(); return false;">
+          <input class="form-control mr-sm-2" type="text" id="channelname" placeholder="Create a channel..." aria-label="Create a channel.">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+        </form>
       </div>
     </nav>
 
     <!-- Page body content -->
     <div class="container" id="body"></div>
+    <div class="container" id="body_lower"></div>
 
 
     <!-- Handlebars -->
@@ -66,7 +64,7 @@
     <!-- display name form -->
     <script id="displayname_form" type="text/x-handlebars-template">
       <div class="container">
-        <form onsubmit="store_displayname(); return false;">
+        <form onsubmit="storeDisplayname(); return false;">
           <div class="form-group">
             <label for="displayname">What should we call you?</label>
             <input type="text" class="form-control" id="displayname" aria-describedby="Display name">
@@ -79,7 +77,7 @@
     <!-- Channel Creation -->
     <script id="create_channel_form" type="text/x-handlebars-template">
       <div class="container">
-        <form onsubmit="create_channel(); return false;">
+        <form onsubmit="createChannel(); return false;">
           <div class="form-group">
             <label for="channelname">Enter a channel name:</label>
             <input type="text" class="form-control" id="channelname" aria-describedby="Channel name">
@@ -89,22 +87,11 @@
       </div>
     </script>
 
-    <!-- Display Channel -->
-    <script id="display_channel" type="text/x-handlebars-template">
-      {% raw -%}
-      <div class="alert alert-primary">
-        <p>{{content.message}}</p>
-        <hr>
-        <span align="right" size="small">posted by {{content.posted_by}} at {{content.timestamp}}</span>
-      </div>
-      {%- endraw %}
-    </script>
-
     <!-- Channel list -->
-    <script id="template_channel_list">
+    <script id="template_channel_list" type="text/x-handlebars-template">
       {% raw -%}
         {{#each channels}}
-          <a class="nav-link dropdown-item" href="" onclick="load_channel('{{channel}}'); return false;">{{channel}}</a>
+          <a class="nav-link dropdown-item" href="" onclick="loadChannel('{{this}}'); return false;">{{this}}</a>
         {{/each}}
       {%- endraw %}
     </script>
