--- a/project3/orders/templates/orders/menu.html
+++ b/project3/orders/templates/orders/menu.html
@@ -1,47 +1,41 @@
 {% extends "orders/base.html" %}
 
 {% block body %}
-  <p>{{message}}</p>
-  <form action="{% url 'addToCart' %}" method="post" name="menu">
+  <p>{{ message }}</p>
+  <form action="{% url 'cart' %}" method="post">
     {% csrf_token %}
-    <table>
-      <thead>
-        <tr>
-          <td>Item</td>
-          <td>Small</td>
-          <td>Large</td>
-          <td>Toppings</td>
-        </tr>
-      </thead>
-      <tbody>
-        {% for item in items %}
-          <tr>
-            <td><input type="checkbox" name="{{item.item}}" value="{{item.id}}" />{{item.item}}</td>
-            {% if item.priceSm == 0.00 %}
-              <td>N/A</td>
-            {% else %}
-              <td>{{item.priceSm}} <input type="radio" name="{{item.item}}" value="Small" /></td>
-            {% endif %}
-            <td>{{item.priceLg}} <input type="radio" name="{{item.item}}" value="Large" /></td>
-            {% if item.topping > 0 %}
-              <td><select name="{{item.item}}" multiple size="{{item.topping}}">
-                {% for topping in toppings %}
-                  <option value="{{topping.id}}" name="{{topping.topping}}">{{topping.topping}}</option>
-                {% endfor %}
-              </select></td>
-            {% endif %}
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <button type="submit">Add selections to cart</button>
+    {{ form }}
+    <input type="submit" value="Add item to cart">
   </form>
+
+  {% if additions %}
   <hr>
+    <p>Successfully added the following items to cart:</p>
+    <ul>
+      {% for record in additions %}
+        <li>{{ record.quantity }} {{ record.size }} {{ record.item }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+
+  {% if cart %}
+  <h3>Your current cart:</h3>
+  <ul>
+    {% for item in cart %}
+      <li>{{ item }}</li>
+    {% endfor %}
+    <p><em>Total</em> ${{ total }}</p>
+  </ul>
+
   <form action="{% url 'clearCart' %}">
+    {% csrf_token %}
     <button type="submit">Clear contents of cart</button>
   </form>
+  {% endif %}
+
   <hr>
   <form action="{% url 'logout' %}">
-    <button type="submit">Logout {{user}}</button>
+    {% csrf_token %}
+    <button type="submit">Logout {{ user }}</button>
   </form>
 {% endblock %}
