--- a/project3/orders/templates/orders/base.html
+++ b/project3/orders/templates/orders/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
   <head>
     <title>Pinnochio's Pizza</title>
+    <script src="{% static 'orders/orders.js' %}"></script>
   </head>
   <body>
 
